# app

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: .gitignore  README.md
cmake/: Assets.cmake  Compiler.cmake  Flags.cmake  Libs.cmake  Target.cmake
example/: CMakeLists.txt  Dockerfile  README.md  index.css  index.html  index.js  main.cpp
example/html/: index.css  index.html  index.js
include/: app.h  asset_manager.h
include/render/: asset_data.h  asset_handle.h  asset_manager.h  asset_registry.h  image_data.h  surface.h  text_data.h  text_spec.h  texture_manager.h
include/util/: dialog.h  error.h  file.h  init.h  pch.h  util.h
src/: app.cpp  asset_data.cpp  asset_handle.cpp  asset_manager.cpp  asset_registry.cpp  error.cpp  file.cpp  image_data.cpp  init.cpp  surface.cpp  text_data.h  texture_manager.cpp  util.cpp
